# pilodara-projects

./: docker-compose.yml
CustomerSupport/: README.md  graph.excalidraw  requirements.txt  (+1 more)
optimizador-cv/optimizador_project/: dev-requirements.txt  pyproject.toml
optimizador-cv/optimizador_project/api/: main.py
optimizador-cv/optimizador_project/docs/: ats_rules.txt  recruitment_tips.txt  resume_best_practices.txt
optimizador-cv/optimizador_project/ofertas/: 01_python_senior.txt  02_frontend_react.txt  03_data_engineer.txt  04_devops.txt  05_ml_engineer.txt  06_java_backend.txt  07_data_analytics.txt  08_fullstack_node.txt  09_qa_automation.txt  10_cloud_architect.txt  11_mobile_dev.txt  12_cybersecurity.txt  13_product_manager.txt  14_ux_ui_designer.txt  15_scrum_master.txt  16_golang_backend.txt  17_data_analyst.txt  18_linux_sysadmin.txt  19_dotnet_senior.txt  20_data_scientist.txt
optimizador-cv/optimizador_project/optimizador/: __main__.py  config.py
optimizador-cv/optimizador_project/optimizador.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
optimizador-cv/optimizador_project/optimizador/agents/: cv_reviewer.py
optimizador-cv/optimizador_project/optimizador/graph/: workflow.py
optimizador-cv/optimizador_project/optimizador/models/: schemas.py
optimizador-cv/optimizador_project/optimizador/rag/: offer_store.py  vector_store.py
optimizador-cv/optimizador_project/optimizador/utils/: pdf_loader.py
optimizador-cv/optimizador_project/static/: index.html
optimizador-cv/optimizador_project/tests/: test_optimizador.py
(+85 files in other folders)
